infrastructure/base/cilium/external-https-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-https-gateway
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
    external-dns.alpha.kubernetes.io/exclude: "true"
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      # NOTE: Change this ip to match Cilium's ippool
      io.cilium/lb-ipam-ips: "192.168.1.10"
  listeners:
    - name: websecure
      protocol: HTTPS
      port: 443
      hostname: "*.leomercier.dev"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: websecure-external-tls
